# egg-netlist-synthesizer

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
csrc/: ffi.cpp
include/: ffi.h
pkg/: egg-netlist-synthesizer-config.cmake.in
src/: lib.rs  main.rs
